# hdc

./: .bumpversion.cfg  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  TODO.md  bitbucket-pipelines.yml  bitbucket-pipelines.yml.off  cpo_hdc.f90  hdc.c  hdc.cpp  hdc.h  hdc_c.cpp  hdc_c.h  hdc_fortran.f90  hdc_fortran_module.f90  known_problems.md  test_hdc_c.c  test_hdc_cpp.cpp  test_hdc_fortran.f90  test_hdc_py_c.py  types.h
.kdev4/: hdc_new.kdev4
apidoc/: C.rst  Makefile  conf.py  index.rst  make.bat  python.rst
benchmark/: CMakeLists.txt  benchmark_fortran.f90  hdc_array_manipulation.cpp  hdc_array_manipulation_c.cpp  hdc_benchmark_common.hpp  hdc_benchmark_common_c.hpp  hdc_benchmark_fortran.f90  hdc_benchmark_get.f90  hdc_benchmark_get_all.f90  hdc_benchmark_paper.cpp  hdc_benchmark_put.f90  hdc_benchmark_put_all.f90  hdc_node_manipulation.cpp  hdc_node_manipulation_c.cpp  main.cpp  test_hdc_get.f90  test_hdc_get_all.f90  test_hdc_put.f90  test_hdc_put_all.f90  timer.c
cmake/: FindLibS3.cmake  FindPythonAnaconda.cmake  FindUDA.cmake
docker-ci/: Dockerfile.bionic  Dockerfile.centos-6  Dockerfile.centos-7  Dockerfile.fedora-31  Dockerfile.focal  Dockerfile.xenial  README.txt  dev-requirements.txt  doc-requirements.txt  update_docker_images.sh
docs/: BUILDING_ON_ITM_GATEWAY.md  BUILDING_hpc-login02.iter.org.md  CMakeLists.txt  Doxyfile.in  MACHINE_SPECIFIC_BUILD_INSTRUCTIONS.md  Makefile  Makefile.in  PERFORMANCE_TESTING.md  conf.py  conf.py.in  docker_images_build_guide.sh  hdc_cpp_doxy.rst  hdc_fortran.rst  index.rst  make.bat  pyhdc.rst  test.rst
doxy/: BUILDING_ON_ITM_GATEWAY.md  BUILDING_WITH_UDA.md  BUILDING_WITH_UDA_GATEWAY.md  CMakeLists.txt  Doxyfile  Doxyfile.in  README.md  (+5 more)
examples/: CMakeLists.txt  Python - Fortran workflow with HDC.ipynb  activate_env.sh  calling_fortran_from_c.c  cpo_hdc.f90  example_c.c  example_cpp.cpp  example_fortran.f90  example_interprocess.cpp  example_lukas.f90  example_python_pybind11.py  example_redis.cpp  example_uda.cpp  examples_python_ctypes.py  hdc_fortran_module.f90  hdc_fortran_module.py  hdc_python.py  hdc_test_pybind.ipynb  process_master.cpp  process_slave.cpp  show_type_traits.cpp  tcv_data_uda.py  test_hdc_cpp.cpp  test_items.py
examples/cython_cpp/: Makefile  README.md  cyhdcdumper.pyx  hdcdumper.cpp  hdcdumper.hpp  run_this.sh  setup.py  test_hdcdumper.py
examples/ids-bundle-fortran/: Makefile  ids_bundle_fortran.py
examples/interfacing_pyhdc_with_c++/: README.md  run_this.sh  setup.py  test_hdcdumper.py
examples/matlab_fortran_workflow_with_HDC/: README.md  run_this.m  test_cpos.m
examples/mpi/: Makefile  hdc_mpi_send_recv.c  run.sh
examples/tcv-data-uda/: Makefile  process_tcv_data.f90  tcv_data_uda.py
fortran/: CMakeLists.txt
fortran/benchmark/: CMakeLists.txt  c_perf.f90  hdc_benchmark_fortran.f90  hdc_benchmark_get.f90
fortran/cmake/: FindCHDC.cmake
fortran/examples/: CMakeLists.txt  Python - Fortran workflow with HDC.ipynb  Python - Fortran workflow with HDC.py  hdc_fortran_module.f90
fortran/examples/ids-bundle-fortran/: process_data.f90
fortran/examples/matlab_fortran_workflow_with_HDC/: hdc_fortran_module.h
fortran/examples/tcv-data-uda/: README
fortran/pkgconfig/: CMakeLists.txt  fhdc.pc.in
fortran/src/: CMakeLists.txt  generate_fortran_api.py
java/: .gitignore  CMakeLists.txt  README.md  dev_libhdc_HDC.h  dev_libhdc_HDC_HDCException.h  java_hdc.cpp
java/jHDC/: CMakeLists.txt  pom.xml
java/jHDC/src/main/java/dev/libhdc/: Example.java  HDC.java
java/jHDC/src/test/java/dev/libhdc/: HDCTests.java  Test.java
matlab/: CMakeLists.txt  HDC.m  Makefile  Makefile.in  calling_c_function.m  hdc_fortran_module.h  hdc_mex.cpp  run_example.m  test_cpos.m  test_matlab.m
misc/: CMakeLists.txt  chdc.pc.in  fhdc.pc.in  hdc.pc.in
plugins/: CMakeLists.txt  mdbm_plugin.cpp  mdbm_plugin.hpp  umap_plugin.cpp  umap_plugin.hpp
python/: CMakeLists.txt  README.md  cyhdc.pyx  dev-requirements.txt  pyhdc.py  requirements.txt  setup.py  setup.py.in
python/pyhdc/: __init__.py  binder.py  cyhdc.pyx
python/pyhdc/templates/: Makefile.j2  python_interface.py.j2
python/tests/: modify_string.json  test_pyhdc.py
python/tests_binder/: add_double.f90  add_double_function.json  add_double_no_module.json  run  test_binder.py  test_function_add_double.f90  test_module_add_double.f90  test_module_merge_hdc_trees.f90  test_module_modify_string.f90  test_module_triple_int.f90  test_template_add_double.json  test_template_add_double_function.json  test_template_merge_hdc_trees.json  test_template_modify_string.json  test_template_triple_int.json  triple_int.json
src/: CMakeLists.txt  cyhdc.pyx  generate_fortran_api.py  hdc.cpp  hdc_c.cpp  hdc_errors.cpp  hdc_fortran.f90  hdc_fortran.f90.template  hdc_fortran_int32.f90  hdc_fortran_int32.f90.template  hdc_fortran_module.f90  hdc_fortran_module.py  hdc_hdf5.cpp  hdc_json.cpp  hdc_new.kdev4  hdc_python.cpp  hdc_uda.cpp  hdc_utils.cpp  pyhdc.py  pyhdc2.py  setup.py  storage_interface.cpp  test_pyhdc.py  utils.cpp
src/examples/: CMakeLists.txt  calling_fortran_from_c.c  cpo_hdc.f90  example_c.c  example_cpp.cpp  example_fortran.f90  example_python_pybind11.py  examples_python_ctypes.py
src/plugins/: CMakeLists.txt  mdbm_plugin.cpp  redis_plugin.cpp  storage_interface.cpp  umap_plugin.cpp
src/serialization/: CMakeLists.txt  hdc.fbs  hdc_flatbuffers_serializer.cpp  hdc_flatbuffers_serializer.h  hdc_hdc_serializer.cpp  hdc_hdc_serializer.h  hdc_hdf5_serializer.cpp  hdc_hdf5_serializer.h  hdc_json_serializer.cpp  hdc_json_serializer.h  hdc_s3_serializer.cpp  hdc_s3_serializer.h  hdc_serializer.cpp  hdc_serializer.h  hdc_uda_serializer.cpp  hdc_uda_serializer.h
src/tests/: CMakeLists.txt  cpo_hdc.f90  test_hdc_c.c  test_hdc_cpp.cpp  test_hdc_fortran.f90  test_hdc_py_c.py  test_hdc_pybind11.py  test_hdc_python.py
test/: CMakeLists.txt  hdc_test_c.cpp  hdc_test_common.hpp  hdc_test_cpp.cpp  hdc_test_fortran.f90  hdc_test_serialization.cpp  main.cpp  test_cyhdc.py  test_hdc_c.cpp  test_hdc_cpp.cpp  test_pyhdc.py
(+1502 files in other folders)
